--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,8 @@ version = "0.1.0"
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+
+[compat]
+julia = "1.6"
+GLMakie = "0.8"
+JSON = "0.21"
